Kustomized-GItOps-Manifests/api-gateway/base/00-api-gateway-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-gateway
  annotations:
   argocd.argoproj.io/sync-wave: "-1"
