Kustomized-GItOps-Manifests/api-gateway/base/04-api-gateway.yaml
# API Gateway Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: api-gateway
  annotations:
   argocd.argoproj.io/sync-wave: "2"
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - name: api-gateway
        image: 547130927936.dkr.ecr.us-east-1.amazonaws.com/prod/api-gateway:latest 
        imagePullPolicy: IfNotPresent  # Pull from registry
        ports:
        - containerPort: 8081
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
          requests:
            memory: "64Mi"
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 5
---
# API Gateway Service
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: NodePort  # External access
    #---
# Ingress for external access (optional)
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
# name: api-gateway-ingress
# namespace: api-gateway
# annotations:
#   nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
# rules:
# - host: image-upload.local
#   http:
#     paths:
#     - path: /
#       pathType: Prefix
#       backend:
#         service:
#           name: api-gateway
#           port:
#             number: 8081
