Kustomized-GItOps-Manifests/api-gateway/base/03-api-gateway-network-policies.yaml
# Network Policy for API Gateway
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-netpol
  namespace: auth-service
  annotations:
   argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {} # Allow all ingress (external traffic)
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: auth-service
    ports:
    - protocol: TCP
      port: 8082
  - to:
    - podSelector:
        matchLabels:
          app: upload-service
    ports:
    - protocol: TCP
      port: 8083
  - {} # Allow other egress
